# backcast

./: .dockerignore  .env  .env.dev.example  .env.development  .env.example  .env.production  .env.test  .gitignore  .mcp.json  .pre-commit-config.yaml  2026-01-25-implement-the-following-plan.txt  CHANGE_ORDER_E2E_TEST_REPORT.md  CLAUDE.md  COMPLETION_STATUS.md  Dockerfile.alembic  Dockerfile.dev.backend  Dockerfile.dev.frontend  E1-001_COMPLETION_SUMMARY.md  GEMINI.md  LICENSE  README.md  TD-065-IMPLEMENTATION-SUMMARY.md  console-after-login.txt  console-debug.txt  console-errors-debug.txt  console-errors.txt  console-test.txt  coverage.json  deploy-daily.sh  deployment.md  dev-start.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  docker-entrypoint-alembic.sh  full_regression_debug.txt  openapi.json  output.txt  regression_debug.txt  repro_breadcrumb.py  (+8 more)
backend/: .coverage_branching  .env.example  .env.prod  .pre-commit-config.yaml  Dockerfile  EV_INVESTIGATION_REPORT.md  README.md  check_all_cos.py  check_branch_content.py  check_branches.py  check_branches2.py  check_co.py  check_co_branch.py  check_db_connection.py  check_model.py  check_project.py  cleanup_ai_test_data.py  coverage.json  debug_output.txt  find_correct_branch.py  fix_co_branch.py  generate_openapi.py  openapi.json  output.txt  package.json  pyproject.toml  query_timeseries.py  repro_breadcrumb.py  reproduce_issue.py  reproduction_evm.py  seed_database.py  test_api.py  test_co_debug.py  test_cors.py  test_evm.py  test_impact_api.py  test_lifecycle_v2.py  test_lifecycle_v3.py  test_output_2.txt  test_rbac.py  (+2 more)
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0174adcb05ff_add_presentation_prompt_to_ai_assistant_.py  021bb7eeaa21_add_project_members_table.py  02a4e8ce7dbb_create_mcp_servers_table.py  03b4089c06af_fix_change_order_approver_fk.py  03d8f0ff0080_add_unique_constraint_document_version.py  081e1509d5a4_add_default_role_to_ai_assistant_configs.py  0e0378323809_add_cost_registrations_table.py  0e2fe53fe853_remove_allowed_tools_from_ai_assistant_.py  15a742af2117_add_partial_unique_indexes_cost_.py  16a1d8c94dd3_drop_schedule_baselines_archive_table.py  16efd3b4c551_add_metadata_to_ai_conversation_messages.py  19f52d1c0418_add_background_execution_fields.py  1cd31119301f_add_projects_table.py  1eba1b50cdf5_drop_project_members_table.py  1fd0ec9f01a4_merge_session_context_and_temporal_fk_.py  20250323_add_recursion_limit_to_ai_assistant_configs.py  20260118_080108_schedule_baseline_1to1.py  20260118_090108_fix_unique_index_current_versions.py  20260118_100000_create_progress_entries.py  20260118_forecast_1to1.py  20260129_000000_add_temporal_to_branches.py  20260203_add_approval_matrix_fields.py  20260203_add_revenue_allocation_to_wbes.py  20260205_impact_fields.py  20260228_remove_wbe_budget_allocation.py  20260320_phase3e_session_context.py  20260326_add_refresh_tokens.py  20260326_fix_temporal_ids.py  20260405_add_dashboard_layouts.py  20260413_add_project_structure_tool.py  20260417_e05_u07_quality_events.py  20260430_add_briefing_data_to_ai_conversation_sessions.py  20260505_add_co_workflow_config_tables.py  20260508_add_workflow_transitions_config.py  20260509_add_holiday_and_custom_fields.py  20260509_create_notifications_table.py  20260509_fix_notification_user_id_fk.py  20260510_add_user_role_assignments_table.py  20260510b_migrate_existing_roles_to_unified_rbac.py  (+82 more)
backend/app/: clear_database.py  crud.py  main.py
backend/app/ai/: __init__.py  agent_service.py  agent_service_DEV_GUIDE.md  briefing.py  briefing_compiler.py  change_order_parser.py  config.py  deep_agent_orchestrator.py  event_types.py  exceptions.py  file_extractors.py  graph.py  graph_cache.py  graph_params.py  handoff_tools.py  llm_client.py  message_utils.py  monitoring.py  plan.py  planner.py  prompt_template.py  schemas.py  state.py  subagent_compiler.py  supervisor_orchestrator.py  supervisor_orchestrator_DEV_GUIDE.md  supervisor_state.py  telemetry.py  (+2 more)
backend/config/: rbac.json
backend/docker/: jaeger.docker-compose.yml  phoenix.docker-compose.yml
backend/docs/: AI_TOOL_APPROVAL_FIX.md
backend/scripts/: check_wbe_branches.py  create_test_db.py  debug_branch_mapper.py  debug_mapper_props.py  debug_rbac_co.py  generate-openapi.py  generate_openapi.py  generate_seed_uuids.py  repair_change_order_co_2026_003.py  repro_evm_performance.py  reproduce_impact_issue.py  reseed_db.py  reset_passwords.py  run-dev.sh  run-scheduler.sh  sync_ai_configs.py  sync_document_manager.py  sync_seed_project_attribution.py  sync_seed_schedule_dependencies.py  sync_seed_work_package_links.py  sync_specialists.py  test_decrypt.py  test_wbe_query_warning.py  update_seed_relationships.py  verify_date_fix.py  verify_date_fix_v2.py  verify_rbac_fix.py  verify_workflow_transitions.py
backend/seed/: AI_TOOLS_TEST_DATA_README.md  IMPLEMENTATION_SUMMARY.md  README.md  SEED_DATA_PLAN.md  add_change_order_scenarios.py  ai_assistant_configs.json  ai_providers.json  ai_specialist_configs.json  ai_tools_test_data.json  branches.json  change_order_audit_logs.json  change_order_workflow.json  change_orders.json  co_approval_rule_config.json  co_impact_level_config.json  co_sla_rule_config.json  co_workflow_config.json  cost_element_types.json  cost_elements.json  cost_event_types.json  cost_registrations.json  dashboard_layouts.json  demo_project.json  departments.json  generate_seed_data.py  mcp_servers.json  organizational_units.json  package_types.json  progress_entries.json  projects.json  rbac_roles.json  rbac_roles.json.bak2  schedule_baselines.json  seed_data.json  seed_projects.json  seed_system_config.json  users.json  verify_seed_data.py  wbes.json  work_packages.json
backend/tests/: conftest.py  factories.py  repro_project_update.py  test_agent_executions_filter.py  test_agent_schedules.py  test_ai_config_env.py  test_crud_lifecycle.py  test_forecast_time_travel.py  test_heartbeat_integration.py  test_plan_execute.py  test_scheduler_tick.py  test_uuid_serialization_fix.py  wipe_db.py
(+2717 files in other folders)
