[project]
name = "backcast_evs"
version = "0.1.0"
description = "Backcast  - EVCS architecture and backend implementation."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "fastapi[standard]>=0.115.0",
    "holidays>=0.50",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "boto3>=1.35.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.10.1",
    "langchain>=1.0.0",
    "langchain-core>=1.2.18",
    "langgraph>=1.1.1",
    "openai>=1.50.0",
    "langchain-openai>=1.1.10",
    "openinference-instrumentation-langchain>=0.1.0",
    "openinference-instrumentation-openai>=0.1.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "langchain-deepseek>=1.0.1",
    "langchain-mcp-adapters>=0.1.0",
    "croniter>=6.2.2",
]

[project.scripts]
generate-openapi = "scripts.generate_openapi:generate_openapi"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
    "types-python-jose>=3.5.0.20250531",
    "pytest-benchmark>=5.2.3",
    "types-croniter>=6.2.2.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
strict = true
python_version = "3.12"
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
]
exclude = ["alembic"]

# Disable specific error codes for LangChain interop
# LangChain uses extensive Any types and complex overload signatures
# that don't align with our strict mode requirements
disable_error_code = ["no-any-return"]

# Per-module overrides for external libraries
[[tool.mypy.overrides]]
module = ["langchain.*", "langgraph.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openinference.*", "opentelemetry.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openpyxl.*", "docx.*", "pptx.*", "pypdf.*"]
ignore_missing_imports = true
follow_imports = "skip"

# google namespace package (transitive dep via langchain-google-genai / google-genai)
# Missing __init__.py causes mypy AssertionError during cross-reference fixing
[[tool.mypy.overrides]]
module = ["google.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["alembic/"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function call in argument defaults (FastAPI Depends)
    "UP042",  # prefer StrEnum over str, Enum (for consistency with existing enums)
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "performance: Marks tests as performance tests (may take longer)",
    "migration: Marks tests as migration verification tests",
    "slow: Marks tests as slow-running tests"
]
addopts = [
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-context=test",
    "--cov-fail-under=80"
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    # Non-core services excluded from coverage (not part of ANSI-748 entity model)
    "*/services/change_order_*",
    "*/services/impact_analysis_service.py",
    "*/services/sla_service.py",
    "*/services/dashboard_service.py",
    "*/services/dashboard_layout_service.py",
    "*/services/global_search_service.py",
    "*/services/financial_impact_service.py",
    "*/services/auth.py",
    "*/services/rbac_admin_service.py",
    "*/services/user.py",
    "*/services/mcp_server_service.py",
    "*/services/document_service.py",
    "*/services/document_folder_service.py",
    "*/services/document_processing_service.py",
    "*/services/notification_service.py",
    "*/services/custom_field_service.py",
    "*/services/storage_service.py",
    "*/services/entity_discovery_service.py",
    "*/services/cost_registration_attachment_service.py",
    "*/services/gantt_service.py",
    "*/services/branch_service.py",
    "*/services/ai_config_service.py",
    # AI module — complex, tested separately
    "*/ai/*",
    # Non-core API routes
    "*/api/routes/ai_chat.py",
    "*/api/routes/ai_config.py",
    "*/api/routes/ai_upload.py",
    "*/api/routes/change_orders.py",
    "*/api/routes/change_order_config.py",
    "*/api/routes/auth.py",
    "*/api/routes/mcp_servers.py",
    "*/api/routes/user_role_assignments.py",
    "*/api/routes/dashboard_layouts.py",
    "*/api/routes/documents.py",
    "*/api/routes/rbac_admin.py",
    "*/api/routes/users.py",
    "*/api/routes/notifications.py",
    "*/api/routes/cost_registration_attachments.py",
    "*/api/routes/search.py",
    "*/api/routes/gantt.py",
    "*/api/routes/dashboard.py",
    "*/api/middleware/session_health.py",
    "*/api/websocket_utils.py",
    "*/api/dependencies/auth.py",
    "*/api/errors.py",
    # Infrastructure / DB seeders
    "*/db/reseed.py",
    "*/db/ai_tools_seeder.py",
    "*/db/seed_context.py",
    "*/db/session.py",
    # Reference data services (simple CRUD, not core ANSI-748 logic)
    "*/services/cost_element_type_service.py",
    "*/services/cost_event_type_service.py",
    "*/api/routes/cost_element_types.py",
    "*/api/routes/cost_event_types.py",
    # App startup / infrastructure (tested indirectly via service tests)
    "*/main.py",
    "*/core/db_utils.py",
    "*/core/jwt_utils.py",
    "*/core/temporal.py",
    "*/core/exceptions/filtering.py",
    "*/core/project_defaults.py",
    "*/models/schemas/temporal_validators.py",
    # Non-core core modules
    "*/core/rbac_unified.py",
    "*/core/notifications/*",
    "*/core/providers/*",
    "*/core/uuid_utils.py",
    "*/core/logging.py",
    "*/core/filtering.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
